infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLables:
      app: client-depl
  template:
    metadata:
      labels:
        app: client-depl
    spec:
      containers:
        - name: client-depl
          image: ahmedaymanbfcai/client-depl
---
apiVersion: v1
kind: Service
metadata:
  name: client-src
spec:
  type: ClusterIP
  selector:
    app: client-src
  ports:
    - name: client-src
      protocol: TCP
      port: 3000
      targetPort: 3000
