infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec: # Customize How this service will behave
  type: NodePort # Type of serivce
  selector: # Telling service to find all the pods with label of "app: posts" and expose pods to ouside world
    app: posts
  ports: # List out all the ports we want to expose on the pod - To make sure that we specifically expose port 4000 on our pod.
    - name: posts # For logging services.
      protocol: TCP
      port: 4000
      targetPort: 4000
